--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Vitor Almeida | A World Level Data Scientist.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -42,7 +42,7 @@
       <nav class="nav" role="navigation">
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+          <li class="nav__item"><a href="#clients" class="nav__link">Knowledge</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Vitor Almeida</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>A World Level Data Scientist for your projects.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -78,28 +78,27 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Electoral Campaign Dashboard</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                A Power BI dashboard was created to analyze the voting prospecting campaign for a Brazilian congressman.
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Power BI</li>
+                <li>SQL</li>
+                <li>Python</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiODJlYmE4NGQtMzllZC00Y2YwLWJmN2QtYTY5M2EyM2UyNWE4IiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9" target="_blank" class="link__text">
+                  Visit Dashboard <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiODJlYmE4NGQtMzllZC00Y2YwLWJmN2QtYTY5M2EyM2UyNWE4IiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9" title="View Source Code" target="_blank">
+                  <img src="./images/powerbi.svg" class="work__code" alt="Power BI">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/zemario.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
