--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="work__text">
               <h3>Electoral Campaign Dashboard</h3>
               <p>
-                A Power BI dashboard was created to analyze the voting prospecting campaign for a Brazilian congressman.
+                A Power BI dashboard that was created to analyze the voting prospecting campaign for a Brazilian congressman.
               </p>
               <ul class="work__list">
                 <li>Power BI</li>
@@ -93,7 +93,7 @@
                   Visit Dashboard <span>&rarr;</span>
                 </a>
                 <a href="https://app.powerbi.com/view?r=eyJrIjoiODJlYmE4NGQtMzllZC00Y2YwLWJmN2QtYTY5M2EyM2UyNWE4IiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9" title="View Source Code" target="_blank">
-                  <img src="./images/powerbi.svg" class="work__code" alt="Power BI">
+                  <img src="./images/powerbi.png" class="work__code" alt="Power BI">
                 </a>
               </div>
             </div>
@@ -104,57 +104,56 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Balance of Trade</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                A Power BI report created to analyze the brazilian balance of trade (BOT), from 2011 to 2021. It was created for IFAG (Goiás Institute for the Strengthening of Agriculture and Livestock).
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Power BI</li>
+                <li>SQL</li>
+                <li>Python</li>
+                <li>Debian</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiYTY1ODdkODMtMzUyNi00ZmZmLTkyOTYtNjU1ZTU0ZmYzMzkwIiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiYTY1ODdkODMtMzUyNi00ZmZmLTkyOTYtNjU1ZTU0ZmYzMzkwIiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9">
+                  <img src="./images/powerbi.png" class="work__code" title="View Source Code" alt="Power BI">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="./images/balanca.png" class="work__image" alt="Project 2" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
+              <h3>CAGED - General Registry of Employed and Unemployed Persons</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                An interactive Power BI report created to support our clients in making decisions regarding public employment policies in the agricultural and livestock sector using Caged data. 
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Power BI</li>
+                <li>R</li>
+                <li>Python</li>
+                <li>SQL</li>
+                <li>Javascript</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMjMyOTAzMWQtN2FmNi00MDE5LTgwNWYtZTYyOGFlYWJkZjRjIiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMjMyOTAzMWQtN2FmNi00MDE5LTgwNWYtZTYyOGFlYWJkZjRjIiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9">
+                  <img src="./images/powerbi.png" class="work__code" title="View Source Code" alt="Power BI">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="./images/caged.png" class="work__image" alt="Project 3" />
             </div>
           </div>
         </div>
