--- a/index.html
+++ b/index.html
@@ -186,10 +186,18 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              Olá, sou Vítor Almeida. Bacharel em Gestão da Informação, com 5 anos de experiência em Business Intelligence (BI). Minhas habilidades e serviços incluem:
+            </p>
+              <li>Coleta e tratamento de dados</li>
+              <li>Modelagem de Machine Learning</li>
+              <li>Automações em Python</li>
+              <li>Criação de relatórios de negócio</li>
+              <li>Interpretação de Dados.</li>
+            <p> 
+              Meu interesse por BI vem da busca por decisões bem fundamentadas, refletindo minha filosofia de comprometimento profundo com o sucesso dos negócios dos meus clientes. 
+            </p>
+            <p>
+              Busco enriquecer meu portfólio e construir cases de negócios sólidos. Meu trabalho é guiado por valores como curiosidade, resultados, transparência, comunicação e eficácia. Meus clientes podem esperar perguntas claras, processos transparentes e entregas pontuais, buscando resultados claros.
             </p>
             <!-- Provide a link to your resume -->
             <a href="#" class="btn">My Resume</a>
@@ -197,7 +205,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo-container" src="./images/perfil.png" alt="perfil" />
           </div>
         </div>
       </div>
