--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="./images/favicon.ico" />
 
   <!-- Put your site title here -->
   <title>
@@ -167,12 +167,10 @@
         <h2>Clients</h2>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
+          <img src="./images/faeg.png" class="client__logo" alt="Company 2" />
+          <img src="./images/faemg.png" class="client__logo" alt="Company 3" />
+          <img src="./images/ifag.svg" class="client__logo" alt="Company 1" />
+          <img src="./images/vamos.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
     </section>
@@ -186,21 +184,23 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Olá, sou Vítor Almeida. Bacharel em Gestão da Informação, com 5 anos de experiência em Business Intelligence (BI). Minhas habilidades e serviços incluem:
-            </p>
-              <li>Coleta e tratamento de dados</li>
-              <li>Modelagem de Machine Learning</li>
-              <li>Automações em Python</li>
-              <li>Criação de relatórios de negócio</li>
-              <li>Interpretação de Dados.</li>
-            <p> 
-              Meu interesse por BI vem da busca por decisões bem fundamentadas, refletindo minha filosofia de comprometimento profundo com o sucesso dos negócios dos meus clientes. 
+              Hello, I'm Vítor Almeida! A Bachelor in Information Management with 5 years of experience in Business Intelligence (BI). My interest in BI stems from the pursuit of well-founded decisions, reflecting my philosophy of deep commitment to the success of my clients' businesses.
             </p>
             <p>
-              Busco enriquecer meu portfólio e construir cases de negócios sólidos. Meu trabalho é guiado por valores como curiosidade, resultados, transparência, comunicação e eficácia. Meus clientes podem esperar perguntas claras, processos transparentes e entregas pontuais, buscando resultados claros.
+              My skills and services include:
+            </p>
+            <ul>
+              <li>Data collection and processing;</li>
+              <li>Machine Learning modeling;</li>
+              <li>Python automations;</li>
+              <li>Business report creation;</li>
+              <li>Data interpretation.</li>
+            </ul>
+            <p>
+              I aim to enrich my portfolio and build strong business cases. My work is guided by values such as curiosity, results, transparency, communication, and effectiveness. Clients can expect clear questions, transparent processes, and timely deliveries, all geared toward achieving clear results.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="https://www.linkedin.com/in/vitor-a-2a5612b2/?locale=en_US" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
@@ -219,15 +219,15 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
+          You are looking for efficective analisys for your business with real results? or looking for an specialized data consulting? or any other business oportunity? in any case feel free to let me know. 
+        </p>
+        <p>
+          I will respond back the quickest I can via e-mail, LinkedIn or Instagram 👇.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="mailto:vitor@vidaemdados.com.br" class="btn">vitor@vidaemdados.com.br</a>
+        <a href="https://www.linkedin.com/in/vitor-a-2a5612b2/" class="btn">LinkedIn</a>
+        <a href="https://www.instagram.com/vitorthealmeida/" class="btn">Instagram</a>
       </div>
     </div>
   </section>
